# large-numbers

./: CMakeLists.txt  LargeNumber.cpp  LargeNumber.h  README.md  config.h  demo.cpp  main.cpp  test.cpp
LargeFloat/src/: CMakeLists.txt  LargeFloat.cpp  LargeFloat.h  LargeFloatImplementation.cpp  LargeFloatImplementation.h  LargeMath.cpp  LargeMath.h
LargeFloat/test/: CMakeLists.txt  LargeMath.test.cpp  addition.test.cpp  comparison.test.cpp  constructors.test.cpp  division.test.cpp  math-utils.test.cpp  multiplication.test.cpp  negation.test.cpp  stringConversion.test.cpp  testUtils.h
LargeInt/src/: CMakeLists.txt  LargeInt.cpp  LargeInt.h  LargeIntImplementation.cpp  LargeIntImplementation.h  config.h  utils.cpp  utils.h
LargeInt/test/: CMakeLists.txt  addition.test.cpp  api.test.cpp  comparison.test.cpp  constructors.test.cpp  division.test.cpp  multiplication.test.cpp  stringConversion.test.cpp  testUtils.h
LargeNumber/src/: CMakeLists.txt  CoefficientsIterator.cpp  CoefficientsIterator.h  LargeDouble.cpp  LargeDouble.h  LargeDoubleMath.cpp  LargeDoubleMath.h  LargeDoubleParser.cpp  LargeDoubleParser.h  LargeInt.cpp  LargeInt.h  LargeIntMath.cpp  LargeIntMath.h  LargeIntParser.cpp  LargeIntParser.h  LargeNumber.cpp  LargeNumber.h  LargeNumbers.h  config.h  utils.cpp  utils.h
LargeNumber/test/: CMakeLists.txt  CoefficientsIterator.test.cpp  LargeDoubleParser.test.cpp  LargeInt.assign.test.cpp  LargeInt.compare.test.cpp  LargeInt.multiply.test.cpp  LargeInt.plus.test.cpp  LargeInt.subtract.test.cpp  LargeIntMath.add.test.cpp  LargeIntMath.compare.test.cpp  LargeIntMath.constructor.test.cpp  LargeIntMath.test.cpp  LargeIntMath.toString.test.cpp  LargeIntParser.test.cpp  additionImpl.test.cpp  testUtils.h  utils.fromString.test.cpp  utils.integerToCoefficients.test.cpp  utils.test.cpp  utils.toString.test.cpp
submissions/: CMakeLists.txt
submissions/#1/: CMakeLists.txt  LargeFloat.cpp  LargeFloat.h  LargeFloatImplementation.cpp  LargeFloatImplementation.h  LargeInt.cpp  LargeInt.h  LargeIntImplementation.cpp  LargeMath.cpp  LargeMath.h  config.h  main.cpp  test.cpp  utils.cpp
submissions/#2/: LargeFloat.cpp  LargeFloat.h  LargeInt.h  (+8 more)
test-utils/: testUtils.h
(+45 files in other folders)
